Stacks 2.3 - Jan 11, 2019
--------------------------
    Feature: populations: Backwards-compatibly worked on filtering options; added long names for -r and -p and
             added --min-samples-overall and --filter-haplotype-wise.
    Feature: populations: Implemented --treemix.
    Feature: gstacks: Improved RAD-loci reference sequences around the end of forward (restriction site-bound) reads.
    Feature: gstacks: Improved the way 2-microsatelittes are dealt with.
    Feature: gstacks: Changed the default value for --var-alpha from 0.05 to 0.01 (--gt-alpha is unchanged at 0.05).
    Feature: gstacks: Improved PCR duplicates-related log information (distribution of clone sizes).
    Feature: gstacks: Added an option to save read alignments (--write-alignments).
    Feature: Backwards-compatibly switched to hyphens in command line options (underscores remain accepted
             where they previously were).
    Feature: cstacks/sstacks now report an error when the disk becomes full.

	2.3b - Jan 23, 2019
	----------
	Bugfix: Fixed some limit cases causing an abort at gstacks.cc:1752.
	Bugfix: Fixed some limit cases causing an abort at debruijn.cc:60.
	Bugfix: Fixed some limit cases apparently causing an infinite loop in the de Bruijn code.
	Bugfix: Restored compilation with the oldest C++11 GCC versions (4.9 and 5.0).

	2.3c - Feb 27, 2019
	---------
	Bugfix: Fixed assert failure at gstacks.cc:1171 (corrected with a return on gstacks.cc:1126)
	Bugfix: inadvertantly compiling out BAM support from process_radtags due to the removal of the HAVE_BAM
                config option, which occurred when we moved the BAM library internally to Stacks.
	Bugfix: corrected infinite loop in populations when --write-single-snp and -r were enabled.
        Bugfix: correct missing comment marker in population's FASTA exports and missing ']' character in FASTA comments.

	2.3d - Feb 28, 2019
	---------